# notestoat

./: README.md  package.json
.github/workflows/: build.yml
src/: app.css  app.html  firowtheme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  files.rs  lib.rs  main.rs  process.rs  themes.rs  watcher.rs
src-tauri/windows/fragments/: context_menu.wxs
src/lib/: MarkdownPreview.svelte  NotificationContainer.svelte  NotificationToast.svelte  PageMain.svelte  PanelEditor.svelte  PanelSide.svelte  PanelTop.svelte  SettingsPanel.svelte
src/lib/documents/: documentFactory.ts  documentService.ts  path.ts
src/lib/elems/: TabFile.svelte
src/lib/markdown/: preview.css  renderer.ts
src/lib/platform/: tauriFiles.ts
src/lib/schemas/: config.ts  monacoTheme.ts
src/lib/stores/: configStore.ts  contextMenu.ts  editor.ts  fileReorder.ts  files.ts  language.ts  monacoTheme.ts  notification.ts  sidePanelStore.ts  theme.ts
src/lib/types/: config.ts  file.ts  theme.ts
src/routes/: +page.svelte
static/: Firow.json
tests/: markdown.test.ts  path.test.ts
